fixed width on paragraphs on small screens

--- a/css/rubik.css
+++ b/css/rubik.css
@@ -1,11 +1,11 @@
-#up {
+/*#up {
   width: 100%;
 text-align: center;
  margin-left: auto;
  margin-right: auto;
  margin-top: 0px;
- margin-bottom: 30px;
-z-index: 10;
+ margin-bottom: 60px;
+z-index: 10;*/
 
 
 }
@@ -24,7 +24,7 @@ z-index: 10;
    margin-left: -255px;
    position:absolute;
    top: 100px;
-   margin-bottom: 50px;
+   margin-bottom: 100px;
    cursor: -webkit-grab;
 }
 
